# saya

./: Cargo.toml
saya/core/: Cargo.toml
saya/core/src/: lib.rs
saya/core/src/block_ingestor/: mod.rs
saya/core/src/block_ingestor/sharding/: event_fetcher.rs  mod.rs  polling.rs
saya/core/src/orchestrator/: mod.rs  sharding.rs
saya/core/src/prover/atlantic/: mod.rs  snos.rs
saya/core/src/shard/: aggregator.rs  mod.rs  shard_output.rs
