[package]
name = "saya-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Saya core implementation."

[dependencies]
anyhow.workspace = true
bigdecimal.workspace = true
cairo-vm.workspace = true
celestia-rpc.workspace = true
celestia-types.workspace = true
ciborium.workspace = true
futures-util.workspace = true
good_lp.workspace = true
hex.workspace = true
integrity.workspace = true
log.workspace = true
num-traits.workspace = true
prove_block.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-os.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
swiftness.workspace = true
swiftness_air.workspace = true
swiftness_commitment.workspace = true
swiftness_fri.workspace = true
swiftness_pow.workspace = true
swiftness_stark.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true
zip.workspace = true
prover-sdk.workspace = true
sqlx.workspace = true
cainome-cairo-serde.workspace = true    
cainome-cairo-serde-derive.workspace = true